--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -23,7 +23,7 @@
             {% else %}
             <a href="{% url "pamela_list" %}" class="btn btn-danger">
                 {% bootstrap_icon "remove" %}
-                On est fermés
+                On est fermé
             </a>
             {% endif %}
         </h1>
