--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -14,9 +14,9 @@ Evénements à UrLab
 <div class="page-header">
   <h1>
     Événements à UrLab
-    <a href="{% url "add_event" %}" class="btn btn-success">
+    <a href="{% url "add_event" %}" class="btn btn-success pull-right">
       <span class="fa fa-plus" aria-hidden="true"></span>
-          Proposer un événement
+          Proposer
     </a>
   </h1>
 </div>
