[add] iCal to Landing page

--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -86,6 +86,12 @@
                     <i class="fa fa-github fa-stack-1x"></i>
                 </span>
             </a>
+            <a href="http://urlab.be/events/urlab.ics" title="iCal" target="_blank">
+                <span class="wow fa-stack fa-lg">
+                    <i class="fa fa-square-o fa-stack-2x"></i>
+                    <i class="fa fa-calendar fa-stack-1x"></i>
+                </span>
+            </a>
             <a href="http://urlab.space" title="SpaceAPI" target="_blank">
                 <span class="wow fa-stack fa-lg">
                     <i class="fa fa-square-o fa-stack-2x"></i>
