--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-Evénements à UrLab
+Evénements de UrLab
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@ Evénements à UrLab
 
 <div class="page-header">
   <h1>
-    Événements à UrLab
+    Événements de UrLab
     <a href="{% url "add_event" %}" class="btn btn-success pull-right">
       <span class="fa fa-plus" aria-hidden="true"></span>
           Proposer
