--- a/events/templates/event_card.html
+++ b/events/templates/event_card.html
@@ -1,12 +1,12 @@
 <div class="panel panel-default">
-     <div class="panel-heading">
+     <div class="panel-body">
         {% if event.is_meeting %}
-            <h3><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h3>
+            <h4><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h4>
         {% else %}
-            <h3><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h3>
+            <h4><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h4>
         {% endif %}
     </div>
-    <div class="panel-body">
+    <div class="panel-footer">
         {% include "event_time.html" %}
     </div>
 </div>
