--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -22,10 +22,10 @@
         {% block head %}{% endblock %}
     </head>
     <body class="base-body">
-    {% if request.user.is_authenticated and request.user.username == "SupayrPoney" }
+    {% if request.user.is_authenticated and request.user.username == "SupayrPoney" %}
     <a href="http://www.reactivemanifesto.org/"> <img style="border: 0; position: fixed; right: 0; top:0; z-index: 9000" src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-red-right.png"> </a>
     {% endif %}
-    {% if request.user.is_authenticated and request.user.username == "iTitou" }
+    {% if request.user.is_authenticated and request.user.username == "iTitou" %}
     <a href="http://www.reactivemanifesto.org/"> <img style="border: 0; position: fixed; right: 0; top:0; z-index: 9000" src="//d379ifj7s9wntv.cloudfront.net/reactivemanifesto/images/ribbons/we-are-reactive-red-right.png"> </a>
     {% endif %}
         <header class="base-header">
