--- a/events/templates/event_detail.html
+++ b/events/templates/event_detail.html
@@ -86,15 +86,17 @@
     <div class="col-md-7">
       <h3>
         Ordre du jour
-        <a class="btn btn-default btn-xs"  href="{% url "edit_meeting" event.meeting.id %}">
-            <span class="fa fa-edit" aria-hidden="true"></span>
-            Editer
-        </a>
-        {% if not event.meeting.ongoing and not event.meeting.PV %}
-          <a href="{% url "export_pad" event.id %}" class="btn btn-default btn-xs">
-            <span class="fa fa-upload" aria-hidden="true"></span>
-            Exporter l'ordre du jour sur le pad
+        {% if request.user.is_authenticated %}
+          <a class="btn btn-default btn-xs"  href="{% url "edit_meeting" event.meeting.id %}">
+              <span class="fa fa-edit" aria-hidden="true"></span>
+              Editer
           </a>
+          {% if not event.meeting.ongoing and not event.meeting.PV %}
+            <a href="{% url "export_pad" event.id %}" class="btn btn-default btn-xs">
+              <span class="fa fa-upload" aria-hidden="true"></span>
+              Exporter l'ordre du jour sur le pad
+            </a>
+          {% endif %}
         {% endif %}
       </h3>
       {% if not event.meeting.OJ %}
@@ -105,14 +107,16 @@
 
       <h3>
         Compte rendu
-        <a class="btn btn-default btn-xs"  href="{% url "edit_meeting" event.meeting.id %}">
-            <span class="fa fa-edit" aria-hidden="true"></span>
-            Editer
-        </a>
-        <a href="{% url "import_pad" event.id %}" class="btn btn-default btn-xs">
-          <span class="fa fa-download" aria-hidden="true"></span>
-          Importer le PV depuis le pad
-        </a>
+        {% if request.user.is_authenticated %}
+          <a class="btn btn-default btn-xs"  href="{% url "edit_meeting" event.meeting.id %}">
+              <span class="fa fa-edit" aria-hidden="true"></span>
+              Editer
+          </a>
+          <a href="{% url "import_pad" event.id %}" class="btn btn-default btn-xs">
+            <span class="fa fa-download" aria-hidden="true"></span>
+            Importer le PV depuis le pad
+          </a>
+        {% endif %}
       </h3>
 
       {% if event.meeting.PV %}
