[fix] don't include bootstrap css twice in wiki pages anymore

--- a/incubator/templates/wiki/base.html
+++ b/incubator/templates/wiki/base.html
@@ -5,9 +5,9 @@
 {% block wiki_pagetitle %}{% endblock %} - Wiki
 {% endblock %}
 
-{% addtoblock "css" %}
+{% block bootstrapcss %}
  <link href="{{ STATIC_URL  }}wiki/bootstrap/css/wiki-bootstrap.min.css" rel="stylesheet">
-{% endaddtoblock %}
+{% endblock %}
 
 {%block content %}
       {% block wiki_breadcrumbs %}{% endblock %}
