--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -12,7 +12,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% render_block "css" %}
+        {% block bootstrapcss %}
         {% bootstrap_css %}
+        {% endblock %}
         {% bootstrap_javascript jquery=1 %}
 
         <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
