[enh] minor in footer

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -108,15 +108,16 @@
         <footer class="footer">
             <div class="container">
                 <p class="text-muted">
-                Made with love at
-                <a href="http://urlab.be">
-                    <img src="/static/img/small-urlab.png" style="height: 1em;">
-                    UrLab</a> - Code on <a href="http://github.com/UrLab/incubator">GitHub</a>
-                - <a href="http://cerkinfo.be">
+                    Made with love at
+                    <a href="http://urlab.be">
+                        <img src="/static/img/small-urlab.png" style="height: 1em;">
+                        UrLab</a> — Code on <a href="http://github.com/UrLab/incubator">GitHub</a>
+                    — <a href="/api">We haz an API</a>
+                    — <a href="http://cerkinfo.be">
                     <img style="height: 1.0em;" src="/static/img/small-ci.png">
-                </a> -
-                <a href="/api">We haz an API</a> -
-                Scientia vincere tenebras
+                    Cerkinfo </a> —
+
+                    ULB — Scientia vincere tenebras
                 </p>
             </div>
         </footer>
