--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -13,20 +13,9 @@
 
             </div>
         {% endif %}
-        <h1>
-            UrLab ?
-            {% if space_open %}
-            <a href="{% url "pamela_list" %}" class="btn btn-success">
-                {% bootstrap_icon "ok" %}
-                C'est ouvert !
-            </a>
-            {% else %}
-            <a href="{% url "pamela_list" %}" class="btn btn-danger">
-                {% bootstrap_icon "remove" %}
-                On est fermé
-            </a>
-            {% endif %}
-        </h1>
+
+    <h1>
+            UrLab ?</h1>
 
         <p>UrLab est le hackerspace de l’ULB. Il s’agit d'un laboratoire ouvert par et pour les étudiants, où l’on met à disposition une infrastructure pour qu’ils puissent y exprimer leur créativité de manière collaborative.</p>
 
@@ -48,14 +37,22 @@
             <span class="fa fa-calendar-o" aria-hidden="true"></span>
             Évènements à venir
         </h2>
+        <p>Les évènements de Urlab programmés pour les prochains jours sont :</p>
         {% if events %}
-            <dl>
-                {% for ev in events %}
-                <dt><h4><a href="{% url "view_event" ev.id %}">{{ ev.title }}</a></h4></dt>
-                <dd>{{ ev.start | naturaltime | capfirst }}
-                <span class="fa fa-map-marker" aria-hidden="true"></span> {{ ev.place }}</dd>
-                {% endfor %}
-            </dl>
+                <dl>
+                    {% for ev in events %}
+                        <div class="col-lg-6">
+                            <div class="panel panel-default" >
+                                <div class="panel-body">
+                                    <dt><h4><a href="{% url "view_event" ev.id %}">{{ ev.title }}</a></h4></dt>
+                                    <dd>{{ ev.start | naturaltime | capfirst }}
+                                    <span class="fa fa-map-marker" aria-hidden="true"></span> {{ ev.place }}</dd>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </dl>
+
         {% else %}
             <p class="text-muted">Il n'y a actuellement pas d'évènements à venir</p>
         {% endif %}
@@ -64,7 +61,19 @@
         <p>UrLab se trouve sur le campus du Solbosh, à l'ULB et est ouvert à tout le monde.</p>
         <iframe width='100%' height='300px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/c4ptaincrunch.o1n42mc8/attribution,zoompan,zoomwheel,geocoder.html?access_token=pk.eyJ1IjoiYzRwdGFpbmNydW5jaCIsImEiOiJUdWVRSENNIn0.qssi5TBLeBinBsXkZKiI6Q#14/50.812919/4.38443799999999'></iframe>
         <p>
-        Pour savoir si nous sommes ouverts et qui s'y trouve actuellement, allez demander à <a href="{% url "pamela_list" %}">Pamela</a></p>
+    <hr/>
+            {% if space_open %}
+            <a href="{% url "pamela_list" %}" class="btn btn-success btn-group-justified">
+                {% bootstrap_icon "ok" %}
+                C'est ouvert !
+            </a>
+            {% else %}
+            <a href="{% url "pamela_list" %}" class="btn btn-danger btn-group-justified">
+                {% bootstrap_icon "remove" %}
+                On est fermé
+            </a>
+            {% endif %}
+
         <hr/>
         <div class="text-right">
             <h3>Social</h3>
