--- a/users/templates/user_detail.html
+++ b/users/templates/user_detail.html
@@ -83,21 +83,21 @@ Profil de {{user.username}}
             {% if user.hide_pamela %}
                 <tr>
                     <td>Vous êtes caché sur P.A.M.E.L.A</td>
-                    <td>
+                    <td><abbr title="Vous n'apparaissez actuellement pas sur ce site lorsque vous êtes sur le réseau de UrLab.">
                         <a href="{% url "show_pamela" %}" class="btn btn-primary">
                             Apparaître
                         </a>
-                    </td>
+                    </abbr></td>
                     <td></td>
                 </tr>
             {% else %}
                 <tr>
                     <td>Vous apparaissez sur P.A.M.E.L.A</td>
-                    <td>
+                    <td><abbr title="Votre pseudonyme apparaît sur ce site lorsque vous êtes sur le réseau de UrLab.">
                         <a href="{% url "hide_pamela" %}" class="btn btn-warning">
                             Disparaître
                         </a>
-                    </td>
+                    </abbr></td>
                     <td></td>
                 </tr>
             {% endif %}
