--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -96,6 +96,12 @@ var PamelaNoobsBox = React.createClass({
 
 var Pamela = React.createClass({
     pamela_content: function(){
+        var hidden_text = "";
+        if (this.state.hidden > 1){
+            hidden_text = "Et " + this.state.hidden + " autres personnes";
+        } else if (this.state.hidden > 0){
+            hidden_text = "Et 1 autre personne";
+        }
         if (this.state.unknown_mac.length + this.state.users.length == 0){
             return <div className="col-md-12 col-sm-12">
                 <h2>Il n'y a personne au Hackerspace pour l'instant</h2>
@@ -109,13 +115,16 @@ var Pamela = React.createClass({
                 <div className="col-md-6 col-sm-12">
                     <h3>Inconnus</h3>
                     <PamelaNoobsBox macs={this.state.unknown_mac}/>
+                    <h4>{hidden_text}</h4>
                 </div>
             </div>;
 
         }
     },
     render: function(){
+        var total_macs = this.state.users.length + this.state.unknown_mac.length + this.state.hidden;
         return <div className="container-fluid">
+            <h3><small>Nous sommes <strong>{total_macs}</strong> pour le moment</small></h3>
             {this.pamela_content()}
             <div className="row-fluid">
                 <h2 className="col-sm-12">
