--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -28,6 +28,10 @@
             {% endif %}
         </h1>
 
+        {% if request.user.is_authenticated %}
+            {% include "home_feed.html" %}
+        {% else %}
+
         <p>UrLab est le hackerspace de l’ULB. Il s’agit d'un laboratoire ouvert par et pour les étudiants, où l’on met à disposition une infrastructure pour qu’ils puissent y exprimer leur créativité de manière collaborative.</p>
 
         <p>UrLab permet aux étudiants de l’ULB ayant un intérêt pour l’informatique, l’électronique ou d’une manière générale la technologie, de se rencontrer, partager et collaborer. Il peut être comparé à un laboratoire ouvert. Les thèmes abordés peuvent avoir un lien direct avec les cours mais pas nécessairement, le but étant d’explorer d’autres domaines, ou d’en approfondir. Quelques exemples sont présentés sur la page projets</p>
@@ -43,6 +47,8 @@
         </p>
 
         <p>UrLab est un lieu de rencontre pour les étudiants intéressés par la technologie. C’est un lieu où l’on développe ses projets et l’on partage ses connaissances par l’intermédiaire d’ateliers et de conférences.</p>
+
+        {% endif %}
 
         <h2>
             <span class="fa fa-calendar-o" aria-hidden="true"></span>
