--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -53,13 +53,15 @@
             </h2>
 
             <p>Les évènements de Urlab programmés pour les prochains jours sont :</p>
-            {% if events %}
-                {% for event in events %}
-                    {% include "event_card.html" %}
-                {% endfor %}
-            {% else %}
-                <p class="text-muted">Il n'y a actuellement pas d'évènements à venir</p>
-            {% endif %}
+            <div class="col-md-9">
+                {% if events %}
+                    {% for event in events %}
+                        {% include "event_card.html" %}
+                    {% endfor %}
+                {% else %}
+                    <p class="text-muted">Il n'y a actuellement pas d'évènements à venir</p>
+                {% endif %}
+            </div>
         </div>
         <div class="col-md-4 well">
             <p>UrLab se trouve sur le campus du Solbosh, à l'ULB et est ouvert à tout le monde.</p>
