Use a protocol relative url for error pages gifs

--- a/incubator/templates/error.html
+++ b/incubator/templates/error.html
@@ -8,7 +8,7 @@
     </h1>
     <h3>{{message}}</h3>
     <center>
-        <img height="400" src="http://http.cat/{{code}}.jpg" alt="">
+        <img height="400" src="//http.cat/{{code}}.jpg" alt="">
     </center>
 </div>
 {% endblock %}
